# contracts

./: .eslintignore  .eslintrc.json  .gitignore  .prettierignore  .prettierrc  Cargo.toml  README.md  build-all-verifiable.sh  build-all.sh  deploy-all.sh  minify-metadata.sh  package-lock.json  package.json  pnpm-lock.yaml  test-all.sh  tsconfig.json
.github/workflows/: rust.yml
azd_registry/: Cargo.toml  lib.rs  util.rs
azns_fee_calculator/: Cargo.toml  lib.rs
azns_merkle_verifier/: Cargo.toml  lib.rs
azns_name_checker/: Cargo.toml  lib.rs
azns_registry/: Cargo.toml  address_book.rs  address_dict.rs  lib.rs  name_checker.rs  psp34_standard.rs
azns_router/: Cargo.toml  lib.rs
interfaces/: Cargo.toml  art_zero_traits.rs  lib.rs
merkle_verifier/: Cargo.toml  lib.rs
scripts/: deploy.ts  deployAll.ts  hello.ts  merkle_verifier.ts  merkle_whitelist.ts  testContractStorage.ts  testMerkleVerifier.ts  updateReservations.ts
scripts/deploy/: deployFeeCalculator.ts  deployMerkleVerifier.ts  deployNameChecker.ts  deployRegistry.ts  deployRouter.ts  setContractAdmin.ts
scripts/reservations/: Reservation.interface.ts  addReservation.ts  addReservedNames.ts  getReservationsFromCSV.ts  getReservedNames.ts  validateReservations.ts
scripts/utils/: DeployFn.type.ts  getDeploymentData.ts  hashAccountId.ts  initPolkadotJs.ts  sanitizeDomainName.ts  writeContractAddresses.ts
scripts/whitelist/: constructMerkleTree.ts  generateInclusionProof.ts  getWhitelistAddresses.ts
src/azns_fee_calculator/: Cargo.toml  lib.rs
src/azns_merkle_verifier/: Cargo.toml
src/azns_name_checker/: Cargo.toml  lib.rs
src/azns_registry/: Cargo.toml  lib.rs
util_macros/: Cargo.toml
util_macros/src/: lib.rs  ownable2step.rs  parser.rs
