[package]
name = "azd_registry"
version = "0.0.2"
authors = ["Azero Domains Team <hello@azero.domains>", "Parity Technologies <admin@parity.io>"]
edition = "2021"
publish = false

[dependencies]
ink = { version = "4.0.0-beta", default-features = false }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.3.0", default-features = false, features = ["derive"], optional = true }
#openbrush = { version = "2.2.0", default-features = false, features = ["psp34"] }

[lib]
name = "azd_registry"
path = "lib.rs"
crate-type = ["cdylib"]

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
#    "openbrush/std",
]
ink-as-dependency = []