[package]
name = "azns_merkle_verifier"
version = "0.1.0"
authors = ["AZERO Domains <hello@azero.domains>"]
edition = "2021"

[dependencies]
ink = { version = "4.0.0-rc", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.3", default-features = false, features = ["derive"], optional = true }

hex = { version = "0.4.3", default-features = false }

[lib]
name = "azns_merkle_verifier"
path = "lib.rs"
crate-type = [
	# Used for normal contract Wasm blobs.
	"cdylib",
    "rlib",
]

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "hex/std"
]
ink-as-dependency = []
