[package]
name = "azns_name_checker"
version = "0.0.1"
authors = ["AZERO Domains <hello@azero.domains>"]
edition = "2021"
publish = false

[dependencies]
ink = { version = "4.0.0-rc", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.3", default-features = false, features = ["derive"], optional = true }
unic-emoji-char = "0.9.0"
unicode-segmentation = "1.10.1"

[lib]
name = "azns_name_checker"
path = "lib.rs"
crate-type = [
    "cdylib",
    "rlib",
]

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
]
ink-as-dependency = []

