[package]
name = "azns_name_checker"
version = "1.0.0"
authors = ["AZERO.ID <hello@azero.id>"]
edition = "2021"
publish = false

[dependencies]
ink = { version = "4.2.0", default-features = false }

util_macros = { path = "../util_macros" }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.5", default-features = false, features = ["derive"], optional = true }
unic-emoji-char = "0.9.0"
unicode-segmentation = "1.10.1"

[dev-dependencies]
ink_e2e = "4.2.0"

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = ["ink/std", "scale/std", "scale-info/std"]
ink-as-dependency = []
e2e-tests = []
