[package]
name = "azns_registry"
version = "0.0.2"
authors = ["AZERO Domains <hello@azero.domains>"]
edition = "2021"
publish = false

[dependencies]
ink = { version = "4.0.0-rc", default-features = false }

azns_name_checker = { path = "../azns_name_checker", default-features = false, features = ["ink-as-dependency"] }
azns_fee_calculator = { path = "../azns_fee_calculator", default-features = false, features = ["ink-as-dependency"] }
merkle_verifier = { path = "../merkle_verifier", default-features = false, features = ["ink-as-dependency"] }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.3", default-features = false, features = ["derive"], optional = true }

[lib]
name = "azns_registry"
path = "lib.rs"
crate-type = ["cdylib"]

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "azns_name_checker/std",
    "azns_fee_calculator/std",
    "merkle_verifier/std",
]
ink-as-dependency = []

