[package]
name = "azns_registry"
version = "0.0.2"
authors = ["AZERO Domains <hello@azero.domains>"]
edition = "2021"
publish = false

[dependencies]
ink = { version = "4.2.0", default-features = false }

interfaces = { path = "../interfaces", default-features = false }
azns_name_checker = { path = "../azns_name_checker", default-features = false, features = ["ink-as-dependency"] }
azns_fee_calculator = { path = "../azns_fee_calculator", default-features = false, features = ["ink-as-dependency"] }
azns_merkle_verifier = { path = "../azns_merkle_verifier", default-features = false, features = ["ink-as-dependency"] }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.5", default-features = false, features = ["derive"], optional = true }

[dev-dependencies]
ink_e2e = "4.2.0"

[lib]
path = "lib.rs"

[profile.release]
overflow-checks = false

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "interfaces/std",
    "azns_name_checker/std",
    "azns_fee_calculator/std",
    "azns_merkle_verifier/std",
]
ink-as-dependency = []
e2e-tests = []
