[package]
name = "util_macros"
version = "0.1.0"
authors = ["AZERO.ID <hello@azero.id>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "2", features = ["full", "parsing", "extra-traits"] }
quote = "1"
proc-macro2 = "1"

[lib]
path = "src/lib.rs"
proc-macro = true
